[gd_scene load_steps=3 format=3 uid="uid://ob7mmi26o013"]

[ext_resource type="Script" path="res://main.gd" id="1_te38p"]
[ext_resource type="PackedScene" uid="uid://c0ii33ggj6x4" path="res://Bg.tscn" id="2_d871a"]

[node name="Main" type="Node2D"]
script = ExtResource("1_te38p")

[node name="play" type="Button" parent="."]
offset_left = 403.0
offset_top = 138.0
offset_right = 766.0
offset_bottom = 246.0
tooltip_text = "Click this button to start a new game."
text = "Play"

[node name="load" type="Button" parent="."]
offset_left = 404.0
offset_top = 252.0
offset_right = 767.0
offset_bottom = 360.0
tooltip_text = "Click this button to start a new game."
text = "Load"

[node name="quit" type="Button" parent="."]
offset_left = 405.0
offset_top = 367.0
offset_right = 768.0
offset_bottom = 475.0
tooltip_text = "Click this button to quit the game."
text = "Quit"

[node name="BG" parent="." instance=ExtResource("2_d871a")]

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
